<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Submit"
    android:background="@drawable/back">

    <ImageView
        android:id="@+id/word_heading"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="50dp"
        android:background="@drawable/google"
        android:contentDescription="@string/down"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="70dp" />

    <ImageView
        android:id="@+id/icon_heading"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/git"
        android:contentDescription="@string/down"
        app:layout_constraintEnd_toStartOf="@+id/word_heading"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="10dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/head"
        android:contentDescription="@string/down"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_heading" />

    <LinearLayout
        android:id="@+id/linear_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageView3"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="horizontal"
        >

        <EditText
            android:id="@+id/editText"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="45dp"
            android:autofillHints="@string/first_name"
            android:background="@drawable/submit_drawable"
            android:hint="@string/first_name"
            android:inputType="textAutoComplete"
            android:padding="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" />

        <EditText
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_marginTop="45dp"
            android:autofillHints="@string/first_name"
            android:background="@drawable/submit_drawable"
            android:hint="@string/last_name"
            android:inputType="textAutoComplete"
            android:padding="8dp"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp" />

    </LinearLayout>


    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="Email Address"
        android:background="@drawable/submit_drawable"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:layout_marginTop="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_Layout" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="Email Address"
        android:background="@drawable/submit_drawable"
        android:hint="@string/github_link"
        android:inputType="textFilter"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="40dp"
        android:background="@drawable/submits"
        app:layout_constraintEnd_toEndOf="@+id/editText3"
        app:layout_constraintStart_toStartOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

</androidx.constraintlayout.widget.ConstraintLayout>